# xianyu_media

./: .gitignore
xianyu_backend/: README.md  TOKEN_SYSTEM_README.md  alembic.ini  create_admin_user.py  pyproject.toml  requirements.txt  run.py
xianyu_backend/alembic/: env.py
xianyu_backend/alembic/versions/: 2decc18d29cd_new_table_video.py  427a74fc497f_new_jsonb_video_extra_params.py  8ca8565a7af8_new_video_arg_rating.py  9d5d4a788616_user.py  a33ea5c045f4_new_col_status.py  a69d57f8808c_add_xianyu_text_col.py  b283de174e48_new_col_hot.py  bbef4565159b_short_drama.py  d04f574eac81_api_token.py  d5479788efe9_new_col_hot_tag.py  df2248d3139e_new_col_region.py  e1db10db04a7_new_video_arg_quality_tag.py  f500f362d28f_new_col_finished_1.py
xianyu_backend/app/: main.py
xianyu_backend/app/api/: deps.py
xianyu_backend/app/core/: config.py  decorator.py  exception.py  exception_handler.py  jwt_auth.py  prompt.py  security.py
xianyu_backend/app/crud/: __init__.py  crud_token.py  crud_user.py  crud_video.py
xianyu_backend/app/models/: __init__.py  api_token.py  user.py  video.py
xianyu_backend/app/modules/: router.py
xianyu_backend/app/schemas/: auth_schema.py  common_schema.py  user_schema.py  video_schema.py
xianyu_backend/app/service/: auth_service.py  user_service.py  video_service.py
xianyu_backend/app/shared/: db.py  decorator.py  exception.py  exception_handler.py  (+2 more)
xianyu_backend/html/: black_right.html  kimi_code.html
xianyu_backend/test/: test_data.py  test_jwt_auth.py  test_pic.py  test_video_recongnizer.py  test_video_recongnizer_v2.py
(+73 files in other folders)
